2013-02-12  Julien Bect  <julien.bect@supelec.fr>

	Check the size of 'box' in stk_normalize.

	* utils/stk_normalize.m: Check the size of 'box' before using
	it. Raise an error if it's not [2 d].

	Return empty from stk_param_estim when lnv is not estimated.

	* paramestim/stk_param_estim.m: Return empty for the second output
	argument when lognoisevariance is not estimated (to avoid warnings
	about output arguments not being assigned).

2013-02-27  Julien Bect  <julien.bect@supelec.fr>

	Add function stk_gpquadform() to compute Gibbs-Paciorek quadratic
	forms.

	* misc/dist/stk_gpquadform.m: New function to compute
	Gibbs-Paciorek quadratic forms.

	* misc/dist/private/stk_gpquadform_pairwise.c,
	misc/dist/private/stk_gpquadform_matrixx.c,
	misc/dist/private/stk_gpquadform_matrixy.c: C sources for the fast
	computation of stk_quadform() in several special cases.

	* misc/config/stk_compile_all.m: Compile the new MEX-files.

2013-02-26  Julien Bect  <julien.bect@supelec.fr>

	Prepare stk_param_estim for parameter objects (instead of vectors).

	* paramestim/stk_param_estim.m: Prepare for parameter objects. Rename
  	  the optimized vector for 'param' to 'u' for clarity (since it is
	  sometimes an extended parameter vector).

2013-02-10  Julien Bect  <julien.bect@supelec.fr>

	Fix and improve stk_datastruct().

	* utils/stk_datastruct.m: Call inputname correctly, with an input
	argument. Return an empty data structure when nargin == 0. Add
	some tests.

2013-02-04  Julien Bect  <julien.bect@supelec.fr>

	Implement the NOLHS construction of Cioppa & Luca (2007).

	* sampling/stk_sampling_olhs.m: The function now has an additional
	hidden option to trigger the construction of an extended (N)OLHS
	following the paper by Cioppa & Lucs (Technometrics, 2007).

	Fixed a bug in stk_rescale() and added regression tests.

	* utils/stk_rescale.m: Fixed a bug in the first part of the
	function (i.e., the part where the data is scaled from its